@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: b6227602098a96f49a319969f0b08a85
+timeCreated: 1502687106
+licenseType: Free
+NativeFormatImporter:
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
