@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: 82b2973833c5e354d91cacfc205b79d7
+timeCreated: 1502687714
+licenseType: Free
+NativeFormatImporter:
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
